--- a/app/build.gradle
+++ b/app/build.gradle
@@ -69,5 +69,5 @@ dependencies {
 
     implementation "androidx.room:room-runtime:$room_version"
     kapt "androidx.room:room-compiler:$room_version"
-
+    implementation 'com.squareup.picasso:picasso:2.8'
 }
