--- a/build.gradle
+++ b/build.gradle
@@ -8,9 +8,10 @@ buildscript {
     }
 }
 plugins {
-    id 'com.android.application' version '7.1.3' apply false
-    id 'com.android.library' version '7.1.3' apply false
-    id 'org.jetbrains.kotlin.android' version '1.5.0' apply false
+    id 'com.google.gms.google-services' version '4.3.13' apply false
+    id 'com.android.application' version '7.3.0' apply false
+    id 'com.android.library' version '7.3.0' apply false
+    id 'org.jetbrains.kotlin.android' version '1.5.21' apply false
 }
 
 task clean(type: Delete) {
