--- a/app/build.gradle
+++ b/app/build.gradle
@@ -74,9 +74,11 @@ dependencies {
     kapt "androidx.room:room-compiler:$room_version"
     implementation 'com.squareup.picasso:picasso:2.8'
 
-    implementation platform('com.google.firebase:firebase-bom:30.3.2')
+    implementation platform('com.google.firebase:firebase-bom:30.5.0')
     implementation 'com.google.firebase:firebase-auth-ktx'
     implementation 'com.google.firebase:firebase-firestore-ktx'
+
+    implementation 'com.google.android.gms:play-services-auth:20.3.0'
 
 
 }
