--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,6 +42,7 @@ android {
 }
 
 dependencies {
+    implementation 'androidx.preference:preference-ktx:1.2.0'
     def room_version = "2.4.2"
     implementation 'androidx.core:core-ktx:1.7.0'
     implementation 'androidx.appcompat:appcompat:1.4.2'
