--- a/app/build.gradle
+++ b/app/build.gradle
@@ -80,6 +80,6 @@ dependencies {
     implementation 'com.google.firebase:firebase-firestore-ktx'
 
     implementation 'com.google.android.gms:play-services-auth:20.3.0'
-
+    implementation 'com.google.android.gms:play-services-ads:21.3.0'
 
 }
