--- a/app/build.gradle
+++ b/app/build.gradle
@@ -82,4 +82,7 @@ dependencies {
     implementation 'com.google.android.gms:play-services-auth:20.3.0'
     implementation 'com.google.android.gms:play-services-ads:21.3.0'
 
+    implementation 'com.github.Trendyol:StateLayout:1.4.4'
+
+
 }
