--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,21 +1,19 @@
 plugins {
     id 'com.android.application'
-    id 'org.jetbrains.kotlin.android'
     id "androidx.navigation.safeargs"
-    id 'kotlin-kapt'
+    id 'org.jetbrains.kotlin.android'
     id 'kotlin-parcelize'
-    id 'dagger.hilt.android.plugin'
     id 'com.google.gms.google-services'
-
+    id 'dagger.hilt.android.plugin'
+    id 'kotlin-kapt'
 }
 
 android {
-    compileSdk 32
-
+    compileSdk 33
     defaultConfig {
         applicationId "com.example.breakingbadapp"
         minSdk 23
-        targetSdk 32
+        targetSdk 33
         versionCode 1
         versionName "1.0"
 
@@ -38,51 +36,41 @@ android {
     buildFeatures {
         viewBinding = true
     }
-
 }
 
 dependencies {
-    implementation 'androidx.preference:preference-ktx:1.2.0'
-    def room_version = "2.4.2"
-    implementation 'androidx.core:core-ktx:1.7.0'
-    implementation 'androidx.appcompat:appcompat:1.4.2'
-    implementation 'com.google.android.material:material:1.6.1'
+    // Core
+    implementation 'androidx.core:core-ktx:1.9.0'
+    implementation 'androidx.appcompat:appcompat:1.5.1'
+    implementation 'com.google.android.material:material:1.7.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
-    testImplementation 'junit:junit:4.13.2'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
     // Navigation
-    implementation "androidx.navigation:navigation-fragment-ktx:2.4.2"
-    implementation "androidx.navigation:navigation-ui-ktx:2.4.2"
-    //Hilt
-    implementation "com.google.dagger:hilt-android:2.41"
-    kapt "com.google.dagger:hilt-compiler:2.41"
-
-
+    implementation 'androidx.navigation:navigation-fragment-ktx:2.5.2'
+    implementation 'androidx.navigation:navigation-ui-ktx:2.5.2'
+    // Dagger-Hilt
+    implementation 'com.google.dagger:hilt-android:2.44'
+    kapt 'com.google.dagger:hilt-compiler:2.44'
     // Glide
-    implementation "com.github.bumptech.glide:glide:4.12.0"
-
+    implementation 'com.github.bumptech.glide:glide:4.14.2'
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
-    //JSON Parsin
-    implementation 'com.google.code.gson:gson:2.8.9'
+    // Retrofit
+    implementation 'com.google.code.gson:gson:2.10'
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
-    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.9'
-
-
-    implementation "androidx.room:room-ktx:$room_version"
-
-    implementation "androidx.room:room-runtime:$room_version"
-    kapt "androidx.room:room-compiler:$room_version"
-    implementation 'com.squareup.picasso:picasso:2.8'
-
-    implementation platform('com.google.firebase:firebase-bom:30.5.0')
+    // Coroutines
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.4'
+    // Room Local Database
+    implementation "androidx.room:room-ktx:2.4.3"
+    implementation "androidx.room:room-runtime:2.4.3"
+    kapt "androidx.room:room-compiler:2.4.3"
+    // Firebase
+    implementation platform('com.google.firebase:firebase-bom:31.0.1')
     implementation 'com.google.firebase:firebase-auth-ktx'
     implementation 'com.google.firebase:firebase-firestore-ktx'
-
+    // Authentication and Advertisement
     implementation 'com.google.android.gms:play-services-auth:20.3.0'
     implementation 'com.google.android.gms:play-services-ads:21.3.0'
-
+    // Preferences
+    implementation 'androidx.preference:preference-ktx:1.2.0'
+    // Additional Dependencies
     implementation 'com.github.Trendyol:StateLayout:1.4.4'
-
-
 }
