--- a/build.gradle
+++ b/build.gradle
@@ -2,18 +2,16 @@
 
 buildscript {
     dependencies {
-        classpath 'com.google.dagger:hilt-android-gradle-plugin:2.41'
-        def nav_version = "2.4.2"
-        classpath("androidx.navigation:navigation-safe-args-gradle-plugin:$nav_version")
-
+        classpath 'com.google.dagger:hilt-android-gradle-plugin:2.44'
+        classpath("androidx.navigation:navigation-safe-args-gradle-plugin:2.5.2")
     }
 }
+
 plugins {
     id 'com.google.gms.google-services' version '4.3.13' apply false
-    id 'com.android.application' version '7.3.0' apply false
-    id 'com.android.library' version '7.3.0' apply false
-    id 'org.jetbrains.kotlin.android' version '1.5.21' apply false
-
+    id 'com.android.application' version '7.3.1' apply false
+    id 'com.android.library' version '7.3.1' apply false
+    id 'org.jetbrains.kotlin.android' version '1.7.10' apply false
 }
 
 task clean(type: Delete) {
